Version 2.2.0.1
=================
bear:
Reduced the load delay on the network multicast render method as the filter can now do cold starts.
Fixed a problem where the filter was unable to change pin mode if it was loaded & rendered and new file was loaded.
Fixed a problem where the PidArray was being accessed during a clear operation and casing a crash.
Re added the line of code to change the speed of the TSFileSourceClock by 1%, the value is now only reduced if it is a cold start file load.
Fixed a problem where the Current File position was not being saved if the setposition() was called prior to the first pause()/run() call.
Fixed a bug that was being caused when the fillbuffer thread was clashing with the UpdateDuration thread.
Removed the line of code to change the speed of the TSFileSourceClock by 1%. It was just for testing.
Added a line of code to change the speed of the TSFileSourceClock by 1%. 
Added an extra TSBuffer::Require() called from the Update Duration thread, this is so that we can read ahead between each FillBuffer calls.
Added some extra PidArray critical locks.
Added some critical locks to the demux, pidinfoarray & stream parser classes.
Changed the duration update method to only parse if we have the pids parsed.
Improved the startup delay by using a cold start method, the fillbuffer does not parse for pcr's until the pids are parsed. This means that the graph clock will not be updated until the pids are parsed. This occurs when there is sufficient file size to correctly parse the data.
Improved the demux::cleardemuxpin() method byreplacing some calls with a vetetdemuxpin() method so it doesn't clear the pid if the new pid is the same value. 
Added in a reference clock delay when we reach the end of the file, will slightly improve as time progresses to stay ahead.